[metadata]
name = py-bcndecode
description = Python bindings for the Rust library bcndecode.
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Rust

[options]
packages = py_bcndecode
install_requires =
    
include_package_data = True
zip_safe = False

python_requires = >=3.10

[bdist_wheel]
py_limited_api = cp310